<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#33CCFF" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text2desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginLeft="40dp"
        android:text="@string/text2desc" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/text2desc" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="40dp"
        android:text="@string/progress" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/progress" />

    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/text3"
        android:text="@string/slash" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/slash" />

    <TextView
        android:id="@+id/reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_marginLeft="40dp"
        android:text="@string/reward" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/reward" />

    <TextView
        android:id="@+id/points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/text5"
        android:text="@string/points" />

    <TextView
        android:id="@+id/text6desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5"
        android:layout_marginLeft="40dp"
        android:text="@string/text6desc" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5"
        android:layout_marginLeft="3dp"
        android:layout_toRightOf="@+id/text6desc" />

    <ImageView
        android:id="@+id/starImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imageInfoStar"
        android:scaleType="fitStart"
        android:src="@drawable/star_shining_01" />

</RelativeLayout>